@@ -558,6 +558,7 @@ A finite field is encoded by any element (\typ{FFELT}).\hfil\break
 \li{... init $T$ for MZV with $s_1+\dots+s_k\leq w$}{zetamultinit$(w)$}
 \li{all MZVs for weight $\sum s_i = n$}{zetamultall$(n)$}
 \li{convert MZV id to $[s_1,\dots,s_k]$}{zetamultconvert$(f,\{\fl\})$}
+\li{MZV dual sequence}{zetamultdual$(s)$}
 \li{multiple polylog $Li_{s_1,\dots s_k}(z_1,\dots,z_k)$}{polylogmult$(s,z)$}
 \li{incomplete $\Gamma$ function ($y=\Gamma(s)$)}{incgam$(s,x,\{y\})$}
 \li{complementary incomplete $\Gamma$}{incgamc$(s,x)$}
