@@ -118,6 +118,10 @@ Vecsmall([3, 1, 3, 1])
 Vecsmall([0, 0, 1, 1, 0, 0, 1, 1])
 Vecsmall([3, 1, 3, 1])
 89
+Vecsmall([2, 1, 1])
+Vecsmall([4])
+Vecsmall([2, 1, 1])
+Vecsmall([3, 1, 3, 1])
   ***   at top-level: zetamult([1,2])
   ***                 ^---------------
   *** zetamult: incorrect type in zetamultconvert (t_VECSMALL).
@@ -151,4 +155,4 @@ Vecsmall([3, 1, 3, 1])
   ***   at top-level: polylogmult([2],[])
   ***                 ^-------------------
   *** polylogmult: incorrect type in polylogmult [#avec != #zvec] (t_VEC).
-Total time spent: 99
+Total time spent: 102
